// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DatePicker default 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="01 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with custom date format 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="MMMM d, yyyy"
                  required={false}
                  value="January 1, 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with custom locale 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="10 Jul 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with custom placeholder 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Month day, year"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with error state 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c9 {
  color: #cc1439;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  margin-right: 8px;
  color: currentColor;
  min-width: 24px;
}

.c13 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c11 .c12 {
  margin-bottom: 8px;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #cc1439;
  border-color: #cc1439;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={true}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="MMMM d, yyyy"
                  required={false}
                  value=""
                />
                <svg
                  aria-hidden={true}
                  className="c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
      <div
        className="c9"
        color="red"
      >
        <svg
          aria-hidden={true}
          className="c10"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="error"
          mr="x1"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          className="c11"
        >
          <p
            className="c12 c13"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            The date is invalid
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DatePicker with min and max date 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  color: #011e38;
  display: inline-block;
}

.c4 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.71428571;
}

.c1 {
  width: 100%;
}

.c7 {
  display: block;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border: 1px solid;
  border-radius: 4px;
  padding: 7px;
  font-size: 16px;
  font-family: 'IBM Plex Sans',sans-serif;
  line-height: 1.5;
  margin: 0px;
  min-height: 40px;
  color: #011e38;
  border-color: #c0c8d1;
}

.c7:focus {
  outline: none;
  color: #011e38;
  border-color: #216beb;
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c7:focus ~ svg {
  fill: #00438f;
}

.c7::-webkit-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::-moz-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7:-ms-input-placeholder {
  color: rgba(1,30,56,0.6);
}

.c7::placeholder {
  color: rgba(1,30,56,0.6);
}

.c8 {
  color: currentColor;
  min-width: 16px;
  position: absolute;
  right: 8px;
  color: #434d59;
  bottom: 50%;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  pointer-events: none;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1  nds-date-picker"
    >
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <label
            className="c2 "
            color="black"
            style={
              Object {
                "display": "block",
              }
            }
          >
            <div
              className="c3"
              data-testid="field-label"
            >
              <span
                className="c4"
              >
                Expiry Date
              </span>
            </div>
            <div
              className="c5"
            >
              <div
                className="c6"
                display="flex"
              >
                <input
                  aria-invalid={false}
                  aria-label="select a date"
                  aria-required={false}
                  className="c7"
                  disabled={false}
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  placeholder="DD Mon YYYY"
                  required={false}
                  value="05 Jan 2019"
                />
                <svg
                  aria-hidden={true}
                  className="Icon-fc7twp-0 c8"
                  color="currentColor"
                  fill="currentColor"
                  focusable={false}
                  height="16px"
                  icon="calendarToday"
                  size="16px"
                  title={null}
                  viewBox="0 0 24 24"
                  width="16px"
                >
                  <path
                    d="M22 3h-3V1h-2v2H7V1H5v2H2v20h20V3zm-2 18H4V8h16v13z"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
